k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-mcp-mimir
  labels:
    app.kubernetes.io/name: sample-mcp-mimir
    app.kubernetes.io/instance: sample-mcp-mimir
    app: sample-mcp-mimir
    appcode: SAMPLE
    costcenter: "9901623"
    drcategory: "dr3"
    portfolio: AI-CloudOps
    project: SAMPLE
spec:
  type: ClusterIP
  ports:
    - name: http-mcp
      port: 8000
      targetPort: http-mcp
      protocol: TCP
    - name: http-metrics
      port: 9090
      targetPort: http-metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: sample-mcp-mimir
    app.kubernetes.io/instance: sample-mcp-mimir
    app: sample-mcp-mimir
    appcode: SAMPLE
    costcenter: "9901623"
    drcategory: "dr3"
    portfolio: AI-CloudOps
